--- a/001.md
+++ b/001.md
@@ -1,4 +1,4 @@
- 
+   
 
 
 
@@ -883,14 +883,30 @@ div{
 
 
 
-伪类选择器的作用是给已经存在的类选择器增加一些功能, 比如:
+伪类选择器的作用是给已经存在的类选择器增加一些额外的选择功能, 比如:
 
-1. 可以通过`动态伪类`为已经存在的选择器增加一种`动态选择`的功能
-2. 
+1. 可以通过`动态伪类`为已经存在的选择器增加一种`动态选择`的功能. **根据状态选择元素**
+2. 可以通过`结构伪类` 根据html文档内的`元素的书写结构` 来选择对应的元素. **根据结构选择元素** 
+
+3. 可以通过`否定伪类` 来排除要选择的元素. **排除一些不想选的,其它全选中**
 
 
 
+> 说明, 所有的伪类选择器前面(即`:前`)可有有其它的选择器, 也可以没有单独使用, 如下: 
 
+```
+div:nth-child(1){ // 表示选择第一个子元素, 且必须是div类型
+	color:red;
+}
+
+:nth-child(1){ // 表示选择所有的第一个元素, 只要是第一个子元素即可
+	color:red;
+}
+```
+
+
+
+ 
 
 
 
@@ -982,27 +998,43 @@ a{ // 这样 link visited focus hover active 下的color就都为red了
 
 *所谓结构伪类, 就是根据元素的结构情况来选择对应的元素* 
 
-`:nth-child()`  `:nth-last-child()`  `:nth-of-type()` `:nth-last-of-type()`
+`:nth-child()`  `:nth-last-child()` 
 
-`:first-child` `:last-child` `:first-of-type` `:last-of-type`
+`:nth-of-type()` `:nth-last-of-type()`
+
+`:first-child` `:last-child`
+
+`:first-of-type` `:last-of-type`
 
 `:root` `only-child` `only-of-type` `:empty`
 
 
 
-- `:nth-child(num)` 
+- **:nth-child(num)** 
 
-  选择span元素, 并且span元素是他父元素中的第一个子元素, **如果父元素的第一个元素不是span就不选** 
+> 选择span元素, 并且span元素是他父元素中的第一个子元素 (直接子元素)
+>
+> **1. 如果span不是父元素的第1个元素就不选**  
+>
+> **2.如果发现span是父元素的第一个元素就选上, 与父元素的类型无关, 只要是父元素的第1个就可以** 
 
 ```
-/*选择span元素, 并且span元素是他父元素中的第一个子元素*/
-span:nth-child(1){
+pan:nth-child(1){ // 只要是父元素的第一个元素是span 就选中, 与父元素的类型无关
 	color:red;
 }
 ```
 
 ```
 <div>
+    <span>div 我是span1</span>
+    <span>div 我是span2</span>
+    <span>div 我是span3</span>
+    <p>
+        <span>p  我是span1</span>
+        <span>p  我是span2</span>
+        <span>p  我是span3</span>
+    </p>
+</div><div>
     <span>我是span1</span>
     <span>我是span2</span>
     <span>我是span3</span>
@@ -1011,39 +1043,230 @@ span:nth-child(1){
 </div>
 ```
 
-![Snip20191113_17]( Snip20191113_17.png)
+![Snip20191113_17](Snip20191113_17.png)
+
+> `:nth-child(num)` 的高级用法
+>
+> 1. 可以这样用 `span:nth-child(2n)` n 代表从0 开始的正整数 0,1,2,3,4,5…,  `span:nth-child(2n)` 表示取 2,4,6,8 ..位上的span子元素
+> 2. 也可以这样用 `span:nth-child(even)` 等价于`span:nth-child(2n)`  evnt 是偶数的意思
+> 3. 还可以这样写 `span:nth-child(2n+1)` n 代表从0 开始的正整数 0,1,2,3,4,5…,   `span:nth-child(2n+1)` 表示取 1,3,5,7. ..位上的span子元素
+> 4. 也可以这么写 `span:nth-child(odd)`  等价于 `span:nth-child(1n)`  odd 是奇数的意思
+
+
+
+**总结:**
+
+1. `:nth-child()` 的完整使用的格式是 `:nth:child(an+b)`
+   - `an+b` 表示的是选择父元素中的第 `an+b` 个子元素
+   - `n` 代表任意正整数和0
+   - `a` `b`  需要给出具体的数值, 可是`正整数` `负整数` 和 `0` 
+2. 最重要的是css选择器在选择子元素时, 子元素的序号是从`1` 开始计算, 也就是说css在选择子元素时, 不存在选择 `第0` 位的子元素, 子元素最小的序号是`1`
+3. 注意: 不要写成` :nth-child(2+n)` 变量 `n` 要写在前面, 否则失效
 
 
 
 
 
+> **思考**
+>
+> 如何使用 `:nth:child()` 取出最前面的2个子元素
+>
+>  
+>
+> 答案: 
+>
+> span:nth-child(-n + 2){	// n 从0开始, -n表示 0, -1, -2,-3 
+>
+> ​	color:red;
+>
+> }
+>
+> 这里主要是利用的css选择器在选择子元素时, 子元素的序号为 大于0 的正整数, 小于1的整数都视为无效. 
 
 
 
 
 
+- **nth-last-child(num)** 
 
-##### 3. 目标伪类选择器
+> `:nth-last-child()` 的语法根`nth-child()` 类似, 不同点是`:nth-last-child()`  是从最后一个元素倒着查找, 其它的都一样. 只是反着数数而已
+
+
+
+> **思考:**
+>
+> 如果想要达到前几个不选, 最后几个不选怎样实现
+>
+>  
+>
+> 答案: 使用 `nth:child()` 和 `nth-last-child()` 组合选择器完成
+>
+> span:nth-child(n+2):nth-last-child(n+2){	// 前2个不选, 后2个不选, 中间的选中
+>
+> ​	color:red;
+>
+> }
+
+
+
+- **:nth-of-type(num)**
+
+> `span:nth-of-type(num) `  是这样来查找的, 第一, 找出父元素内的所有的 `span` 元素, 如果所有的`span` 元素中有第`num` 个元素, 那么这个`span` 元素就是要找的元素. (直接子元素)
+>
+> 注意: 
+>
+> `span:nth-of-type(num)` 这种方式查找与`span` 元素前面有没有其他的元素没关系, 是要是父元素中的`span`类型的第`num` 个元素即可 
+
+
+
+**总结:** 
+
+1. `:nth-of-type(num)` 的完整格式是`:nth-of-type(an+b)` ,  其中  `an+b` 的计算与使用原理与`:nth-child(an+b)` 中的`an+b` 的使用和计算原理是一样的
+
+
+
+- **:nth-last-of-type(num)**
+
+> 使用方法同 `:nth-of-type(num)` 的用法是一样的, 只是索引的序号是倒着数.
+
+
+
+
+
+- **:first-child()**
+
+> `span:first-child` 表示找第一个子元素, 且子元素的类型必须是 span类型
+>
+> `span:first-child` 等价于`span:nth-child(1)` 
+
+
+
+- **:last-child**
+
+> 功能与`:first-child` 类似, 只是选择最后一个 
+
+ 
+
+- **:root** 
+
+> 根元素选择器, 一般表示的是获取 html 元素
+
+
+
+- **empty**
+
+> `:empty` 代表里面完全是空白的元素, 开始标签和结束标签之间没有任何内容
+
+```
+p{
+  width: 100px;
+  height:50px;
+  background-color: green;
+  margin: 10px;
+  float: left;
+}
+
+p:empty{ // 选择完全没有内容的 p 元素
+	border: 2px solid #f00;
+}
+```
+
+```
+<p></p>   							 // 完全空白
+<p> 我是段落1</p> 
+<p>   </p> 							// 空格也算内容
+<p><span></span></p> 		// 其它标签也算内容
+<p>我是段落2</p>
+```
+
+![Snip20191114_3](Snip20191114_3.png)
+
+
+
+##### 3.否定伪类
+
+> 含义: 否定伪类`:not(selector)` ,表示排除 `selector` 选择的元素后的所有元素
+>
+> 否定伪类选择器只支持简单选择, 不支持组合. 也就是说selector只能是`标签选择器,  类选择器 , 通用选择器, 属性选择器, 伪类选择器, id选择器`  
+>
+>  比如: 下面的写法是支持的
+
+```
+div:not(div.one){ // 表示选择所有元素, 除了带 .one 类的div, 排除的是 <div class="one"> </div>
+	color:red;
+}
+
+:not(div .one){   // 选择所有, 除了div中含有 one 类的元素
+	color:red;
+}
+
+:not(p):not(body):not(html){ // 表示选择所有, 除了p 除了body 除了 html 
+	color:red;
+}
+```
+
+
+
+**注意: ** 
+
+*如果要同时排除一些元素, 必须要连着写, 如果分开就就失效了*  
+
+*比如: 同时排除 p, body, html 就得按照下面连着写* 
+
+```
+
+:not(p):not(body):not(html){  
+	border: 5px solid #000;
+}
+```
+
+
+
+这样分开写, 就失效了
+
+```
+:not(p){  // 排除了p, 包含了body 和 html
+	border: 5px solid #000;
+}
+:not(body){ // 排除了body, 包含了p 和 html
+	border: 5px solid #000;
+}
+:not(html){  //// 排除了 html,包含了 p, body
+	border: 5px solid #000;
+}
+```
+
+![Snip20191114_5](Snip20191114_5.png)
+
+
+
+
+
+##### 4. 目标伪类选择器
 
 `:target` 
 
 
 
-##### 4.  语言伪类选择器
+##### 5.  语言伪类选择器
 
 `:lang()`
 
 
 
-##### 5.  元素状态伪类选择器
+##### 6.  元素状态伪类选择器
 
 `:enabled` `:disabled` `:checked` 
 
 
 
-##### 6.否定伪类
 
-`:not()` 
+
+
+
+
+
+# 七. 伪元素 
 
 
 
