--- a/001.md
+++ b/001.md
@@ -1425,5 +1425,243 @@ a[href^="http"]::after{ //[href^="http"] 表示选择要有http属性的
 
 
 
+# 八. Emmet 插件
 
 
+
+## 1.  插件 (Plugin) 插件介绍
+
+1. 基于某个系统或者某个软件平台开发的程序, 只能在指定的平台运行, 不能脱离指定的平台单独运行. 
+2. 插件的定位是开发实现原平台不具备的功能, 新增功能 
+3. 插件是一种可插拔的拓展程序, 为其他应用程序增加额外的功能
+4. Emmet提供了一种非常简洁的语法规则, 按下`tab键` 就可以生成一堆对应的 HTML/ CSS 代码,webstorm 已经内置了Emmet 插件
+
+
+
+## 2. Emmet 插件语法
+
+
+
+ 
+
+#### Emmet 结构语法
+
+
+
+其实Emmet的语法规则和CSS 中的组合选择器差不多
+
+- `>` 表示的是 子元素 `div>ul>li  `
+
+```
+<div>
+    <ul>
+        <li></li>
+    </ul>
+</div>
+```
+
+- `+`表示的是相邻兄弟 `div+ul+p`
+
+``` 
+<div></div>
+<ul></ul>
+<p></p> 
+```
+
+- `*` 表示几个兄弟 `div*2` `span*2`
+
+```
+<div></div>
+<div></div>
+
+<span></span><span></span>
+```
+
+- `^`  一个`^` 表示和相邻兄弟的父元素时兄弟关系
+
+  2个`^` 表示和相邻兄弟的父元素的父元素是兄弟关系
+
+  `div>ul>li*2+p^h1`
+
+```
+<div>
+    <ul>
+        <li></li>
+        <li></li>
+        <p></p>
+    </ul>
+    <h1></h1>
+</div>
+
+<div>
+    <ul>
+        <li></li>
+        <li></li>
+        <p></p>
+    </ul>
+</div>
+<h1></h1>
+```
+
+- `()`  表示的是整体的意思 `div+(div>li+p)+span+p` `div>(ul+p)*2`	
+
+```
+<div></div>
+<div>
+    <li></li>
+    <p></p>
+</div>
+<span></span>
+<p></p>
+
+<div>
+    <ul></ul>
+    <p></p>
+    <ul></ul>
+    <p></p>
+</div> 
+```
+
+
+
+
+
+#### Emmet 属性语法
+
+- `#` 为紧挨着的元素添加id属性  `div#box`
+
+  同一个元素如果有多个id属性,直接挨着写就可以了 `div#box#user`
+
+```
+<div id="box"></div>
+
+<div id="box user"></div>
+```
+
+- `.` 为紧挨着的元素添加class属性 ` div.header`
+
+  同一个元素如果有多个id属性,直接挨着写就可以了  `div.btn.corner`
+
+```
+<div class="header"></div>
+
+<div class="btn corner"></div>
+```
+
+- `[属性名=属性值]` 为紧挨着的元素指定属性名和属性值 `div[title='userinfo"]`
+
+  如果有多个指定名字属性,可以多个`[属性名1=val1]` 挨着写, 也可以写在一个 `[]` 中
+
+  `div[name='user'][type="password"]`   div[name='user' type="password"]
+
+```
+<div title="userinfo"></div>
+
+<div name="user" type="password"></div>
+<div name="user" type="password"></div>
+```
+
+- `[属性名]` 为挨着的元素设置属性名, 属性值自动为`""`
+
+  可以这样写`[属性名1   属性名2]` 也可以 `[属性名1][属性名2]`
+
+  `div[name type]`  `div[name][type]`
+
+  ```
+  <div name="" type=""></div>
+  <div name="" type=""></div>
+  ```
+
+
+
+- 多个属性之间可以连着写
+
+  `div#use#stu.box.red[title='hongse']`
+
+  ```
+  <div id="use stu" class="box red" title="hongse"></div>
+  ```
+
+  
+
+
+
+
+
+#### Emmet 序号递增语法  
+
+- $`  为紧挨着的字符添加递增序号
+
+  `div.box$*3`  `div.box$$*3`
+
+  ```
+  <div class="box1"></div>
+  <div class="box2"></div>
+  <div class="box3"></div>
+  
+  <div class="box01"></div>
+  <div class="box02"></div>
+  <div class="box03"></div>
+  ```
+
+- `@` 表示递增序号从多少开始, 一般和`$` 配合使用
+
+  `div.box$@2*3` `div.box$@-2*3` 负数表示倒着排 `div.box$@5test*3`
+
+  ```
+  <div class="box2"></div>
+  <div class="box3"></div>
+  <div class="box4"></div>
+  
+  // 倒着排
+  <div class="box4"></div>
+  <div class="box3"></div>
+  <div class="box2"></div>
+  
+  // 数字在中间
+  <div class="box5test"></div>
+  <div class="box6test"></div>
+  <div class="box7test"></div>
+  ```
+
+  
+
+#### Emmet 内容语法
+
+- `{}`  声称该标签之间的内容
+
+  `div{我 是 div}` `div{我 是 div}*3` `div{我 是 div$}*3` 
+
+  ```
+  <div>我 是 div</div>
+  
+  <div>我 是 div</div>
+  <div>我 是 div</div>
+  <div>我 是 div</div>
+  
+  <div>我 是 div1</div>
+  <div>我 是 div2</div>
+  <div>我 是 div3</div>
+  ```
+
+  `a>{baidu}`  `a>{baidu}+span{百度}` `p>{点击}+a{这里}+{继续}`
+
+  ```
+  <a href="">baidu</a>
+  
+  <a href="">baidu<span>百度</span></a>
+  
+  <p>点击<a href="">这里</a>继续</p>
+  ```
+
+  
+
+更多的Emmet插件语法, 参看github 上 snippets.json
+
+https://github.com/emmetio/emmet/blob/master/lib/snippets.json
+
+
+
+
+
+ 
