--- a/001.md
+++ b/001.md
@@ -1662,6 +1662,1107 @@ https://github.com/emmetio/emmet/blob/master/lib/snippets.json
 
 
 
+# 九. CSS 特性
+
+
+
+## 1. CSS 属性的继承 & inherit
+
+
+
+1. CSS 中 有些属性是可以继承的
+
+   - 一个元素如果没有设置某属性的值, 就会跟随**父元素**的值, 这个就称为继承.
+   - 一个元素如果有设置自己的属性, 就使用自己的值
+   - 比如: `color` `font-size` 等属性是可以继承的.
+   - 究竟哪些属性是可以继承的, 不用死记, 用多了就熟悉, 可以查文档. 
+   - 不能继承的属性, 一般可以使用 `inherit` 值强制继承
+
+   ```
+   div {
+     background-color: #f00;
+     font-size: 15px;
+     border: 2px solid #00f;
+     width: 200px;
+     height: 200px;
+   }
+   
+   p{
+     background-color: green;
+     /*border 属性不能继承, 但是此处就是想继承父元素的 border, 给border设置 inherit 值即可;*/
+     border: inherit;
+   }
+   ```
+
+   ``` 
+   <div>
+       我是div的内容
+       <P>我是div内的p元素的内容</P>
+   </div>
+   ```
+
+   ![Snip20191114_14](Snip20191114_14.png)
+
+
+
+
+
+ **元素的属性来源查看** 
+
+![Snip20191114_22]( Snip20191114_22.png)
+
+
+
+ ## 2. CSS属性继承的注意点 (继承计算值)
+
+
+
+1. CSS 属性继承的是**计算值** , 并不是当初编写属性时的指定值(字面值).
+
+   > `指定值` 又称作 `字面值`, 就是书写在css样式里的值, 比如: `50%` `inherit` 等
+   >
+   > `计算值` 就是经过字面值计算的到的值
+
+   ```
+   .div1{
+     /*50px 就是 font-size的 指定值 字面值*/
+     font-size: 50px;
+   }
+   
+   .div2{
+     /*50% 就是 font-size的 指定值 字面值, 50px * 50% = 25px 就是计算值*/
+     font-size: 50%;
+   }
+   
+   .div3{
+     /*因为CSS继承中继承的是计算值
+     因此, font-size:inherit; 相当于是 font-size:25px;  .div2中的计算值
+     而不是  font-size: 50%; 不是 25px * 50% = 12.5px
+     */
+     font-size:inherit;
+   }
+   ```
+
+   ```
+   <div class="div1">我是div1
+       <div class="div2">我是div2
+           <div class="div3">我是div3</div>
+       </div>
+   </div>
+   ```
+
+   ![Snip20191115_25](Snip20191115_25.png)
+
+
+
+![Snip20191115_21](Snip20191115_21.png)
+
+
+
+
+
+## 3. CSS 属性的层叠
+
+
+
+1. css 允许**多个** **相同名字的CSS属性**  **层叠在一个元素上** 
+   - 层叠后的结果是: 只有一个css属性会生效
+
+2. 浏览器的开发者工具非常清晰的显示了那个CSS属性会生效
+3. 那个CSS属性生效, 取决于CSS属性所处环境的优先级高低
+
+![Snip20191115_29]( Snip20191115_29.png)
+
+
+
+
+
+## 4. CSS 属性的优先级
+
+1. 按照经验, 为了方便比较CSS属性的优先级, 可以个CSS 属性所处的环境定义一个权值(权重)
+
+   ```
+   !importan: 10000
+   内联样式: 1000
+   id选择器: 100
+   类选择器/ 属性选择器/ 伪类: 10
+   元素选择器/ 伪元素: 1
+   通配符: 0
+   ```
+
+> 1. 针对性越强的选择器, 优先级越高
+>
+> 内联样式(行内样式) > id  > class/ 属性选择/ 伪类选择 > 标签 > 通配
+>
+> 2. 如果优先级一样, 就参考就近原则
+
+
+
+
+
+
+
+## 5. CSS 属性使用经验
+
+
+
+1. 为什么有时编写的CSS属性不好使, 有可能是因为
+
+- 选择器的优先级太低
+
+- 选择器没有选中对应的元素 (选择器写错了)
+
+- CSS属性的使用形式不太对
+
+  - 元素不支持此CSS属性, 比如: `span`元素默认不支持 `width` 和`height`
+  - `color:red;` 写成 `color:10px` 了
+
+- 浏览器不支持此CSS属性, 比如旧版本的浏览器不支持CSS3某些属性
+
+  ```
+  input {
+  	// 设置光标颜色, 有些浏览器不支持
+  	 caret-color: red;
+  }
+  ```
+
+-  可能属性被同一种类型的属性覆盖了
+
+  - `font` 属性覆盖`font-size `  , `font-size` 属性覆盖了`font` 属性中的大侠
+  - `background` 属性覆盖了`background-color` 属性, 等等
+
+- 可能是html标签的书写不规范, 导致css 选择器没选
+
+  - p` 标签不能嵌套`div` 标签
+
+    ```
+    // 以下是错误写法
+    <p>
+    	我是段落
+    	<div> 我是段落里的div</div>
+    </p>
+    
+    // 当按照上面这样写时, 浏览器会自动的将html标签解析为下面的样式
+    <p>
+    	我是段落
+    </p>
+    <div> 我是段落里的div</div>
+    <p></p>
+    ```
+
+    
+
+总之, 各种各样的问题都可以通过浏览器的开发者工具调试出来.  发现问题了,按`f12` 跳出浏览器调试工具查看
+
+
+
+
+
+
+
+
+
+# 十. HTML 列表元素
+
+HTML 提供了3组常用的用来展示列表的元素
+
+- 有序列表 `ol` `li`
+- 无序列表 `ul` `li`
+- 定义列表 `dl` `dt` `dd`
+
+
+
+
+
+## 1. 有序列表- ol li
+
+- `ol`  (ordered list)
+
+  - **有序列表, 直接子元素只能是`li`** 
+
+- `li` (list item)
+
+  - 列表中的每一项
+
+  ```
+  <h1>热门车系</h1>
+  <ol>
+      <li>奥迪宝马A6</li>
+      <li>宝马5系</li>
+      <li>宝马3系</li>
+  </ol>
+  ```
+
+  ![Snip20191115_30](Snip20191115_30.png)
+
+
+
+
+
+## 2. 无序列表- ul li
+
+- `ul` (unordered list)
+
+  - **无序列表, 直接子元素只能是`li` ** 
+
+- `li` (list item)
+
+  - 列表中的每一项
+
+  ```
+  <h2>宾利车型</h2>
+  <ul>
+      <li>慕尚</li>
+      <li>飞驰</li>
+      <li>欧陆系列</li>
+  </ul>
+  ```
+
+  ![Snip20191115_31](Snip20191115_31.png)
+
+
+
+### 1. list-style-type 属性  
+
+>  设置 `li` 元素前的项目符号样式
+>
+>  这个`list-style-type` 属性是可以设置在`ul` 标签上, 然后里面的`li` 标签通过继承获取对应的属性值
+
+```
+li {
+	list-style-type: none; // 清除项目符号
+	list-style-type:circle; 
+}
+
+ul { // 直接给ul元素设置, 里面的 li 元素可以通过继承获取
+	list-style-type: none; // 清除项目符号
+	list-style-type:circle; 
+}
+```
+
+
+
+
+
+## 3. 定义列表 dl dt dd
+
+
+
+- `dl` (definition list)
+  - **定义列表, 直接子元素只能是 `dt` `dd`**
+- `dt` (definition term)
+  - 列表中每一项的项目名
+- `dd` (definition description)
+  - 列表中每一项的具体描述, 是对`dt` 的描述/ 解释/ 补充
+  - 一个`dt` 后面一般紧跟着1个或多个`dd`
+
+
+
+> dt dd 常见的组合
+>
+> 事物的名称, 事物的描述
+>
+> 问题, 答案
+>
+> 类别名, 归属于这类的各种事物
+
+
+
+```
+<dl>
+    <dt>西瓜汁</dt>
+    <dd>红色的饮料</dd>
+    <dt>咖啡</dt>
+    <dd>黑色的饮料</dd>
+    <dt>牛奶</dt>
+    <dd>白色的饮料</dd>
+</dl>
+```
+
+![Snip20191115_32](Snip20191115_32.png)
+
+
+
+```
+<h2>车型</h2>
+<dl>
+    <dt>SUV</dt>
+    <dd>牧马人</dd>
+    <dd>普拉多</dd>
+    <dd>揽胜</dd>
+    <dl>大型车</dl>
+    <dd>奥迪A8</dd>
+    <dd>奔驰S级</dd>
+    <dd>宝马7系</dd>
+</dl>
+```
+
+![Snip20191115_33](Snip20191115_33.png)
+
+
+
+# 十一. 列表元素相关CSS属性
+
+
+
+
+
+## 1. 列表相关的常见CSS属性有4个:
+
+
+
+`list-style-typelist-style-imagelist-style-positionlist-style`
+
+- 以上4个属性, 适用于**display设置为 list-item的元素** , 比如: `li` 元素
+- 以上4个元素都可以继承, 所以设置个`ol` `ul` , 默认也会应用到`li` 元素上
+
+![Snip20191115_36](Snip20191115_36.png)
+
+**注意:** 
+
+`list-style-typelist-style-imagelist-style-positionlist-style` 这4个属性, 只有直接设置在`ol` 或者`ul`类型的父元素, 才会被资源素`li` 继承. 为什么是这样呢?  
+
+
+
+
+
+## 2. 列表CSS属性详解
+
+
+
+-  `list-style-type`
+
+  > 设置`li` 元素前面的项目符号
+
+  - disc (实心圆)	circle(空心圆)	square (实心方块)
+
+  - decimal(阿拉伯数字)   lower-roman(小写罗马数字)   upper-roman(大写罗马数字)
+
+  - lower-alpha( 小写英文字母)   upper-alpha(大写英文字母)
+
+  - none 取消项目符号(什么也没有)
+
+    
+
+
+
+- `list-style-image`
+
+  > 设置某张图片为`li` 元素的前面的标记, 会覆盖`list-style-type`的设置
+  >
+  > 注意: 只好设置了`list-style-image`  之后 `list-style-type` 就不好用了
+
+  *这个属性虽然可以设置图标, 但是我们一般不用, 因为通过这种方式设置的项目符号图标, 不好精准的控制位置我们一般设置`list-style-type` 为`none` 然后自己自定义项目符号图标*
+
+  ```
+  li {
+  	lsit-style-image: url()
+  }
+  ```
+
+  ![Snip20191115_34](Snip20191115_34.png)
+
+ 
+
+- `list-style-position`
+
+  > 设置`li`元素前面标记的位置, 可以取`outside` `inside` 2个值
+  >
+  > 几乎不用
+
+
+
+- `list-style`
+
+  > 这个属性,其实是前面3个属性`list-style-type` `list-style-image` `list-stype-position` 的缩写属性
+
+  比如, 可以这样写
+
+  ```
+  li { // 以下几个写法都可以
+  	list-style: circle inside; // 顺序没有关系
+  	list-style: url(camera.png) outside;
+  	list-style: inside square; 
+  	list-style: none;
+  	list-style: insize
+  }
+  ```
+
+  
+
+
+
+
+
+
+
+
+
+# 十二. HTML 表格元素
+
+
+
+## 1. table 表格元素介绍
+
+- `tr` (table) 
+
+  > 表格元素
+
+- `tr` (table  row)
+
+  > 一行表格
+
+- `td` (table data)
+
+  > 表格中的一个单元格 
+
+
+
+## 2. table 的常用属性
+
+| border          | 边框的宽度                                                   |
+| --------------- | :----------------------------------------------------------- |
+| cellpadding     | 单元格内部的间距                                             |
+| cellspacing     | 单元格之间的间距                                             |
+| width           | 表格的宽度                                                   |
+| align           | 表格的水平对齐方式: `left`  `right` `center`  <br />这个属性是用于控制table在父元素中的位置的 |
+| border-collapse | 合并单元格的边框, 常用来实现细线表格                         |
+| border-spacing  | 设置单元格之间的间距 , 与 `td` `tr` 中的 `cellspacing` 属性功能一样<br />只是是通过table元素来设置的 |
+
+```
+<table border="1" cellspacing="0" cellpadding="5 10" >
+  <tr>
+    <td>放映事件</td>
+    <td>语言版本</td>
+    <td>放映厅</td>
+    <td>售价(元)</td>
+    <td>选座购票</td>
+  </tr>
+
+  <tr>
+    <td>13:15</td>
+    <td>国语3D</td>
+    <td>1号厅</td>
+    <td>110</td>
+    <td><input type="button" value="选座购票"></td>
+  </tr>
+  <tr>
+    <td>13:15</td>
+    <td>国语3D</td>
+    <td>2号厅</td>
+    <td>210</td>
+    <td><input type="button" value="选座购票"></td>
+  </tr>
+</table>
+```
+
+![Snip20191115_37](Snip20191115_37.png)
+
+
+
+
+
+## 3.tr,td 的常用属性
+
+
+
+| valign  | 单元格的垂直对齐方式<br> `top` `middle` `bottom` `baseline` |
+| ------- | ----------------------------------------------------------- |
+| align   | 单元格水平对齐方式<br />`left` `center` `right`             |
+| width   | 单元格的宽度                                                |
+| height  | 单元格的高度                                                |
+| rowspan | 单元格可横跨的行数                                          |
+| colspan | 单元格可横跨的列数                                          |
+
+> `align` 和 `valign` 属性既可以设置在`tr` 上也可以设置在`td` 上, 设置在`tr` 上每个`td` 可以通过继承来获取
+
+
+
+
+
+
+
+## 4. 细线表格
+
+**细线表格最正宗的做法** 
+
+> 1. 给td 单元格设置边框 (boder: 1px solid #000)
+> 2. 给table 表格设置, 合并单元格属性(border-collapse:collapse)
+
+```
+ td {
+   border: 1px solid #000;
+ }
+
+table {
+  /*合并单元格之间的边框, 细线表格效果*/
+  border-collapse: collapse;
+}
+```
+
+```
+<table>
+  <tr>
+    <td >放映事件</td>
+    <td>语言版本</td>
+    <td>放映厅</td>
+    <td>售价(元)</td>
+    <td>选座购票</td>
+  </tr>
+
+  <tr>
+    <td>13:15</td>
+    <td>国语3D</td>
+    <td>1号厅</td>
+    <td>110</td>
+    <td><input type="button" value="选座购票"></td>
+  </tr>
+  <tr>
+    <td>13:15</td>
+    <td>国语3D</td>
+    <td>2号厅</td>
+    <td>210</td>
+    <td><input type="button" value="选座购票"></td>
+  </tr>
+</table>
+```
+
+![Snip20191115_38](Snip20191115_38.png)
+
+
+
+## 5. 表格的其它元素
+
+- **tbody **元素
+
+  >  表格的主体 
+
+- **caption**元素
+
+  >  表格的标题
+
+-  **thead**元素
+
+  >  表格的表头
+
+- **tfoot**元素
+
+  >  表格的页脚
+
+- **th**元素
+
+  >  表格的表头单元格 
+
+
+
+**完整的表格**
+
+```
+td,th {
+  border: 1px solid #000;
+}
+
+table {
+  /*合并单元格之间的边框, 细线表格效果*/
+  border-collapse: collapse;
+}
+```
+
+```
+<table>
+        <caption>欢迎光临万达影城</caption>
+        <thead>
+            <tr>
+                <th>放映事件</th>
+                <th>语言版本</th>
+                <th>放映厅</th>
+                <th>售价(元)</th>
+                <th>选座购票</th>
+            </tr>
+        </thead>
+
+
+        <tbody>
+        <tr>
+            <td>13:15</td>
+            <td>国语3D</td>
+            <td>1号厅</td>
+            <td>110</td>
+            <td><input type="button" value="选座购票"></td>
+        </tr>
+        <tr>
+            <td>13:15</td>
+            <td>国语3D</td>
+            <td>2号厅</td>
+            <td>210</td>
+            <td><input type="button" value="选座购票"></td>
+        </tr>
+
+        </tbody>
+
+
+        <tfoot>
+        <tr>
+            <td colspan="5"> 看电影免费抽大奖</td>
+        </tr>
+        </tfoot>
+
+    </table>
+```
+
+![Snip20191115_39](Snip20191115_39.png)
+
+
+
+
+
+## 6. 单元格合并
+
+
+
+合并单元格要领:
+
+- 合并方向是向右向下
+- 删除掉被覆盖的td元素
+
+ ![Snip20191115_42](Snip20191115_42.png)
+
+
+
+## 7. CSS属性 -border-spacing
+
+
+
+**border-spacing** 用于设置单元格之间的水平/ 垂直间距, 比如: 
+
+
+
+```
+table {
+	// 第一个表示水平间距, 第二个表示垂直间距
+	// 只设置1个表示水平和垂直
+	border-spacing: 10px 20px;
+}
+```
+
+![Snip20191115_43](Snip20191115_43.png)
+
+
+
+# 十三.  表单元素 
+
+
+
+
+
+## 1. form 元素中常用的元素
+
+- **form** 元素
+
+  > 表单元素
+  >
+  > 一般情况下, 其它表单相关的元素都是他的后代元素
+
+- **input** 元素
+
+  > 单行文本输入框/ 单选框/ 复选框/ 按钮等元素   (这个表现可以有很多样式)
+
+- **textare** 元素
+
+  > 多行文本框
+
+- **select**元素 **option** 元素
+
+  > 下拉选择框
+
+- **button** 元素
+
+  > 按钮
+
+- **label** 元素
+
+  > 表单元素的标题
+
+- **fieldset** 元素
+
+  > 表单元素组
+
+- **legend** 元素 
+
+  > fieldset 的标题
+
+
+
+## 2. input 元素常用的属性
+
+- **type** 属性
+
+  > 设置`input`标签的类型, `type`可设置的值如下:  
+
+  - `text` 设置`input`标签为明文文本输入框(明文输入)
+- `password`  设置`input` 标签为密文文本输入框(密文输入)
+  - `radio` 单选框
+  - `checkbox` 复选框
+  - `button` 按钮
+  - `reset` 重置
+  - `submit` 提交表单数据给服务器
+  - `file` 文件上传
+  - `hidden`  隐藏域
+  - `maxlength` 允许输入的最大字数
+  - `placeholder` 占位文字 
+
+- **readonly**属性
+  - 只读
+- **disable**属性
+  - 禁用
+- **checked** 属性
+  - 默认被选中
+  - 只有当 `type` 为`radio` 或`checkbox` 时可用
+- **autofocus** 属性
+  - 当页面加载时, 自动聚焦
+- **name** 属性
+  - 名字
+  - 在提交数据格服务器时, 可用于区分数据类型
+- **value** 属性
+  - 取值
+- **form**
+  - 设置所属的`form` 元素(填写 form元素的id)
+  - 一旦使用了此属性, input元素即使不写在form元素内,数据也能够提交到服务器
+
+```
+<form action="https://www.baidu.com">
+    <div>  只读属性: <input type="text" value="只读属性" readonly> </div> 
+    <div> 禁用: <input type="text" value="我是禁用属性" disabled>  </div> 
+    <div>  爱好: 足球 <input type="checkbox" checked name="hobby" > 篮球 <input type="checkbox" name="hobby"> </div> 
+    <div> autofocus: <input type="text" value="autofocus 属性" autofocus> </div> 
+</form>
+```
+
+
+
+
+
+
+
+
+
+## 3. form 元素常用的属性
+
+- **action** 属性
+
+  >  用于指定表单请求数据的请求 URL
+
+- **method** 属性
+
+  > 用于指定表单的请求方式 (get/ post), 默认就是get 请求
+
+  - get请求, 在请求的URL后面以?的形式跟上发给服务器的参数, 多个参数支架以&隔开
+
+  - 浏览器和服务对URL长度是有限制的, 因此在URL后面附带的参数是有限制的, 通常是不超过1kb
+
+    ```
+    http://www.baidu.com/?name=zhangsan&aqe=18
+    ```
+
+  - post请求, 发送给服务器的参数全部放在请求体中
+  - 理论上, post传递的数据量是没有限制的(具体看服务器的处理能力)
+
+- **target** 属性
+
+  > 在什么地方打开URL (和 a 元素的 target 是一个道理)
+
+- **enctype** 属性
+
+  > 规定了在向服务器发送表单数据之前如何对数据进行编码
+
+  - 取值有3种
+
+    `application/x-www-form-urlencode` 默认的编码方式
+
+    `multipart/form-data` 文件上传时必须为这个值, 并且method必须是post
+
+    `text/plain` 普通文件传输
+
+- **accept-charset** 规定表单提交时使用的字符编码
+
+
+
+
+
+
+
+
+
+## 4. input 和label 元素
+
+- `label` 元素一般跟`input`元素配合使用, 用来表示`input`的标题 
+- `label` 可以跟某个`input`绑定, 点击`label`就可以激活对应的`input` 
+- `label` 元素和`input` 元素之间通过 `id` 绑定
+
+
+
+```
+<form action="https://www.baidu.com"
+      method="post"
+      enctype="multipart/form-data">
+
+    <div>
+        <label for="phone">手机:</label>
+        <input id="phone" type="text" name="phone">
+    </div> 
+    <div>
+        <label> 密码:<input type="password" name="pwd"></label>
+    </div> 
+    <div>
+        验证码:
+        <input type="text"> <input type="button" value="点击获取验证码">
+    </div> 
+    <div>
+        头像:
+        <input type="file" name="photo">
+    </div> 
+    <div>
+        兴趣:
+        篮球<input type="checkbox" name="hobby" value="basketball">
+        足球<input type="checkbox" name="hobby" value="football">
+        乒乓球<input type="checkbox" name="hobby" value="pingpang">
+    </div> 
+    <div>
+        性别:
+        男<input type="radio" name="sex" value="male">
+        女<input type="radio" name="sex" value="female">
+    </div> 
+    <div>
+        <input type="reset" value="重置">
+        <input type="submit" value="提交"></div> 
+</form>
+```
+
+![Snip20191118_1](Snip20191118_1.png)
+
+
+
+## 5. 常见的布尔属性 
+
+- 布尔属性可以没有属性值, 写上属性名就代表使用这个属性
+
+- 常见的不二属性有:
+
+  `disable` `checked` `readonly` `multiple` `autofocus` `selected`
+
+  
+
+
+
+
+
+## 6. button 按钮
+
+- **button** 
+
+  > 按钮元素有三种样式
+
+  - 普通按钮, (type=button)使用value属性设置按钮的文字
+  - 重置按钮(type=submit) 重置它所属`form` 的所有表单元素(包括 input, textarea, select)
+  - 提交按钮(type= submit), 提交它所属`form` 的表单数据给服务器(包括 input, textarea, select)
+
+  ```
+  <form action="https://baidu.com">
+      账号: <input type="text">
+      <button type="button"> 默认就是button 样式</button>
+      <button type="reset"> 重置样式</button>
+      <button type="submit"> 提交样式</button>
+  </form>
+  ```
+
+  默认情况下(input提交按钮和button提交按钮), 敲回车键(enter 键)会自动提交表单数据给服务器
+
+  如需禁用此行为, 需要编写响应的 javaScript代码, 监听回车键的敲击
+
+
+
+注意: 
+
+在form表单中可以使用 input元素和button元素都可以实现按钮和提交按钮的功能, 没有什么区别, 都可以.
+
+
+
+
+
+
+
+## 7.  去掉input 元素tab时的轮廓线
+
+```
+// 这种2方式只是去掉了聚焦时的样式而已, 其实也是聚焦了
+input, input:focus{
+	outline:none;
+}
+
+ 
+```
+
+
+
+去掉`input` 标签和`button` 标签的聚焦效果. 正确的做法是设置`tabindex=-1`
+
+```
+<input type="text" tabindex="-1">
+<button tabindex="-1"></button>
+```
+
+
+
+
+
+
+
+## 8. textarea 元素
+
+- **textarea** 
+
+  > 多行文本输入框, 默认情况下可以变化输入框的大小
+  >
+  > 常用属性, `cols` 列数, `rows` 行数
+
+  禁用textarea 缩放的css 设置
+
+  ```
+  textarea {
+  	resize: none;  			// 不允许调整 textarea 的大小
+  	resize: horizontal; // 水平缩放
+  	resize:vertical; 		// 垂直缩放
+  	resize:both 				// 水平垂直缩放, 默认就是这个值
+  }
+  ```
+
+  一般情况下, 不建议使用 `cols` 和 `rows` 属性来控制 `textarea` 元素的大小, 使用`width 和 height` 属性控制大小更精确一点.
+
 
 
  
+
+## 9. select 和 option 元素
+
+
+
+- **option** 是**select** 的子元素, 一个option代表一个选项
+
+  > 注意: select 元素中直接子元素只能放` option`
+
+  - select常用属性
+    - multiple, 可以多选
+    - size, 显示多少项
+  - option 常用属性
+    - selected, 默认被选中
+
+  ```
+  <select name="edu" size="5" multiple>
+      <option value="1">小学</option>
+      <option value="2" selected>初中</option>
+      <option value="3">高中</option>
+      <option value="4">大专</option>
+      <option value="5">本科</option>
+      <option value="6">硕士</option>
+      <option value="7">博士</option>
+  </select>
+  ```
+
+  
+
+
+
+## fieldset 和 legend 元素
+
+
+
+- **fieldset ** 元素 和 **legend** 元素是用来个 表单元素分组用的如下:
+
+```
+<form action="https://www.baidu.com"
+      method="post"
+      enctype="multipart/form-data">
+
+
+    <fieldset>
+        <legend> 必填信息</legend>
+        <div>
+            <label for="phone">手机:</label>
+            <input id="phone" type="text" name="phone">
+        </div>
+        <div>
+            <label> 密码:<input type="password" name="pwd"></label>
+        </div>
+        <div>
+            验证码:
+            <input type="text"> <input type="button" value="点击获取验证码">
+        </div>
+
+    </fieldset>
+
+    <fieldset>
+        <legend> 可选信息</legend>
+
+        <div>
+            头像:
+            <input type="file" name="photo">
+        </div>
+        <div>
+            兴趣:
+            篮球<input type="checkbox" name="hobby" value="basketball">
+            足球<input type="checkbox" name="hobby" value="football">
+            乒乓球<input type="checkbox" name="hobby" value="pingpang">
+        </div>
+        <div>
+            性别:
+            男<input type="radio" name="sex" value="male">
+            女<input type="radio" name="sex" value="female">
+        </div>
+
+    </fieldset>
+
+    <div>
+        <input type="reset" value="重置">
+        <input type="submit" value="提交">
+    </div>
+</form>
+```
+
+![Snip20191118_4](Snip20191118_4.png)
+
+
+
+一般来说, `fieldset` 元素和`legend` 元素很少使用, 因为标题的位置不灵活
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
