--- a/001.md
+++ b/001.md
@@ -1,3 +1,7 @@
+
+
+
+
    
 
 
@@ -383,6 +387,49 @@ div{
 ```
 
 ![variant](variant.png)
+
+
+
+## 7. font 属性
+
+
+
+- **font** 是一个缩写属性(shorthand property)
+
+  - 比如: `font-style`  `font-variant` `font-weight` `font-size/line-height` `font-family`
+
+  ```
+  div {
+  	// 注意: font-size 与 line-height 之间的 / 不能省 
+  	font: italic small-caps 700 20px/40px "微软雅黑";
+  }
+  ```
+
+  > font-styly: 设置字体是否显示斜体
+  >
+  > font-variant: 设置字体中小写字母的样式, 要不要将小写现成成缩小的大写
+  >
+  > font-weight: 设置字体的重量 (粗细程度)
+  >
+  > font-size: 设置字体的大小
+  >
+  > line-size: 设置字体的最小行高
+  >
+  > font-family: 设置字体
+
+  > 注意:
+  >
+  > - font 属性连写时, 书写书序是有要求的 , 一般按照  `font-style`  `font-variant` `font-weight` `font-size/line-height` `font-family` 的顺序书写, 连写时其中前面三个 `font-style`  `font-variant` `font-weight` 可以省略也可以调换顺序但是只能放在前面
+  > - `/line-height` 可以省略, 如果不省略必须写在 `font-size` 后面 
+  > - 也就是说font属性连写时,最重要的就是 **font-size 和 font-family**  不能省, 也不能 调换顺序
+
+  ```
+  div {
+  	font: 20px "微软雅黑"; // 这是最简单的写法
+  }
+  ```
+
+  
 
 
 
@@ -2412,18 +2459,22 @@ table {
   - `placeholder` 占位文字 
 
 - **readonly**属性
+  
   - 只读
 - **disable**属性
+  
   - 禁用
 - **checked** 属性
   - 默认被选中
   - 只有当 `type` 为`radio` 或`checkbox` 时可用
 - **autofocus** 属性
+  
   - 当页面加载时, 自动聚焦
 - **name** 属性
   - 名字
   - 在提交数据格服务器时, 可用于区分数据类型
 - **value** 属性
+  
   - 取值
 - **form**
   - 设置所属的`form` 元素(填写 form元素的id)
@@ -2672,7 +2723,7 @@ input, input:focus{
 
 
 
-## fieldset 和 legend 元素
+## 10. fieldset 和 legend 元素
 
 
 
@@ -2738,6 +2789,45 @@ input, input:focus{
 
 
 
+## 11. 隐藏域
+
+- 隐藏域不会显示在页面上, 但是提交数据的时候, 他的name和value也会被提交到服务器
+- 如果有些发送给服务器的数据, 是不需要用户输入的, 或者不希望在页面展示的, 可以使用隐藏域
+
+*隐藏域最多的应用场景是传递`id` , 一般我们网页在修改一个信息时, 就会必须传递一些参数, 而这些参数是用户不关心的* 
+
+```
+<form action="http://baidu.com">
+    <fieldset>
+        <legend>修改个人信息</legend>
+        姓名: <input type="text" name="name"> <br>
+        简介: <input type="text" name="introduce"><br>
+        城市: <input type="text" name="city"> <br>
+        //  隐藏域经常用来偷偷的传递一些必要的参数给服务器
+        <input type="hidden" name="id"  value="001"><br>
+        <input type="submit">
+    </fieldset> 
+</form>
+```
+
+![Snip20191118_5](Snip20191118_5.png)
+
+> 虽然有些必要传递的参数,可以写在 请求的url 中, 但是不建议这样写, 因为有些服务器不支持, 最好通过隐藏域来发送
+
+```
+// 不推荐使用, 有些浏览器不支持url中有参数 parameter
+<form action="http://baidu.com/?id=10"> 
+        姓名: <input type="text" name="name"> <br>  
+        <input type="submit"> 
+</form>
+
+// 推荐使用隐藏域
+<form action="http://baidu.com/"> 
+        姓名: <input type="text" name="name"> <br>  
+        <input type="hidden" name="id"  value="10"><br>
+        <input type="submit"> 
+</form>
+```
 
 
 
@@ -2751,8 +2841,565 @@ input, input:focus{
 
 
 
+# 十四. CSS属性-元素类型
 
 
+
+
+
+## 1 . 块级元素/ 行内元素
+
+- 根据元素的**显示** 类型, HTML元素主要分为2大类
+
+  - **块级**元素 (block-level elements)
+
+    > - **独占一行**  (独占父元素的一行)
+    > - 可以随意设置宽高 (默认宽度撑满父元)
+    > - 高度默认由内容决定
+    > - 比如: `div` `p` `pre` `h1~h6` `ul` `ol` `li` `dl` `dt` `dd` `table` `form` `article` `aside` `footer` `header` `hgroup` `main` `nav` `section` `blockquote` `hr` 等
+
+  - **行内级** 元素 (inline-level elements)
+
+    > - 多个行内级元素可以在同一行显示(可以在父元素的同一行显示)
+    > - 比如: `a` `img` `span` `strong` `code` `iframe` `label` `input` `button` `canvas` `embed` `object` `video` `audio` 等
+
+
+
+
+
+## 2. 替换元素/ 非替换元素
+
+- 根据元素的**内容** 类型, HTML元素主要可以分为2大类
+
+  - **替换** 元素(replaced elements)
+
+    > - 元素本身没有实际的内容, 浏览器根据元素的类型和属性, 来决定元素的具体显示内容
+    > - 比如: `img` `input` `iframe` `video` `embed` `canvas` `audio` `object` 等
+
+  - **非替换** 元素 (non-replaced elements)
+
+    > - 和替换元素相反, 元素本身有实际的内容, 浏览器会直接将其内容显示出来, 而不需要根据元素的类型和属性来判断到底显示什么内容
+    > - 比如: `div` `p` `pre` `h1~h6` `ul` `ol` `li` `dl` `dt` `dd` `table` `form` `article` `aside` `footer` `header` `hgroup` `main` `nav` `section` `blockquote` `hr` `a` `strong` `span` `code` `label` 等
+
+## 3.元素的分类总结(*)
+
+
+
+![Snip20191119_1](Snip20191119_1.png)
+
+
+
+
+
+  
+
+# 十五. CSS属性- display
+
+## 1. display属性的常用取值
+
+
+
+- CSS 中有个display属性, 能修改元素的显示类型, 有4个常用值
+
+  - **block** , 让元素显示为块级元素
+
+  - **inline**, 让元素显示为行内级元素
+
+  - **none**, 隐藏元素
+
+  - **inline-block** , 让元素同时显示行内级/块级的元素
+
+    > - 可以让元素同时具备块级/ 行内级元素的特征
+    > - 跟其它行内级元素在同一行像是
+    > - 可以设置宽高
+    > - inline-block 的宽高, 默认由内容决定
+
+
+
+## 2. 元素嵌套注意点
+
+
+
+- 不要使用行内级元素去包含块级元素
+
+  ```
+  // 不要这样做, 不要使用小的元素去包裹大的元素 
+  <span>
+  	<div> <div>
+  </span>
+  ```
+
+- 如果是**块级元素 或 行内块级**,
+
+  一般可以包含其它任何元素的(比如: 块级元素/ 行内级元素/ inline-block元素)
+
+  **特殊情况, p元素不能包含其它块级元素(比如:div元素)**
+
+  ```
+  // 错误写法
+  <p>
+  	<div> </div>
+  </p>
+  ```
+
+- 行内级元素 (比如: a/ span/ strong 等)
+
+  一般情况下, 只能包含行内级元素
+
+
+
+## 3. display属性的其它取值
+
+- display 属性的以下取值, 等同于某些HTML元素
+
+  - table : <table> , 一个block-level表格
+  - inline-table: <table>, 一个inline-level表格
+  - table-row: <tr>
+  - table-row-group: <tbody>
+  - table-header-group: <thead>
+  - table-footer-group:<tfoot>
+  - table-cell: <td> <th>, 一个单元格
+  - table-caption: <caption>, 表格的标题
+  - list-item: <li>
+
+  ```
+  <style> 
+    span{
+      list-style: disc inside;
+      display: list-item;
+    } 
+  </style>
+  ```
+
+  ```
+  <ul>
+      <li>我是li1</li>
+      <li>我是li2</li>
+      <li>我是li3</li>
+      <li>我是li4</li>
+      <li>我是li5</li>
+  </ul>
+  
+  
+  <div>
+      <span>我是span1</span>
+      <span>我是span2</span>
+      <span>我是span3</span>
+      <span>我是span4</span>
+      <span>我是span5</span>
+  </div>
+  ```
+
+  ![Snip20191119_5](Snip20191119_5.png)
+
+
+
+- 我们只要熟悉了 元素的 display 属性, 我们就可以利用这个属性, 做出我们想要的结果,示例如下: *利用div strong span 做出一个表格效果出来*  
+
+  ```
+  <style>
+  
+    div{
+      display: table;
+      border-collapse: collapse;
+    }
+    strong{
+        display: table-row;
+    }
+    span{
+      display: table-cell;
+      border: 1px solid #f00;
+      padding: 5px;
+    }
+  </style>
+  ```
+
+  ```
+  <div>
+      <strong>
+          <span>我是span1</span>
+          <span>我是span2</span>
+          <span>我是span3</span>
+      </strong>
+      <strong>
+          <span>我是span1</span>
+          <span>我是span2</span>
+          <span>我是span3</span>
+      </strong>
+      <strong>
+          <span>我是span1</span>
+          <span>我是span2</span>
+          <span>我是span3</span>
+      </strong>
+  </div>
+  ```
+
+  ![Snip20191119_7](Snip20191119_7.png)
+
+  > 理解了这个**display属性**的特性后, 我们就可以只使用一个div元素做完整个网页
+  >
+  > 但是, 但是, 不要这样干, 很装逼, 不要干这些没有语义的事情
+
+
+
+
+
+# 十六. CSS属性-visibility
+
+- **visibility**, 能控制元素的可见性, 有2个常用值
+
+  - `visible` 显示元素
+  - `hidden` 隐藏元素
+
+  > `visibility:hidden;` 和 `display:none;`的区别
+  >
+  > - 当设置`visibility:hidden` 时, 虽然元素看不见了, 但是元素的框依旧还留着, 还会占着原来的位子
+  > - 当设置`display:none` 时, 不仅元素看不见, 而且元素的框也会被移除, 不会占着原来的位置
+  >
+  > 总结: `visibility:hidden` 相当于是元素不显示而已, 位置占着
+  >
+  > `display:none` 相当于将显示的内容移除, 相当于移除, 既不显示也不占位置
+
+
+
+
+
+# 十七. CSS属性-overflow
+
+- **overflow**属性用于控制内容溢出时的行为
+
+  - `overflow:visible` 溢出的内容照样显示(一般默认就是这个值)
+  - `overflow:hidden` 溢出的内容直接裁剪
+  - `overflow:scroll` 溢出的内容被裁剪, 但是可以根据滚动机制查看(滑动滚动条查看)
+    - 会一直显示滚动区域(即, 水平和垂直的滚动条会一直显示, 不论内容的多少)
+    - 滚动条占用的空间属于`width` 和`height` 设置的范围内
+  - `overflow:auto` 自动根据内容是否溢出来决定是否显示滚动条
+    - 水平和竖直方向的滚动条会根据内容是否超出元素的宽度自动显示
+
+  ```
+  div{
+    background-color: #ff0;
+    width: 200px;
+    height: 200px;
+    overflow: scroll;
+  }
+  ```
+
+  
+
+  ```
+  <div>
+      我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div我是div
+      <img src="a.jpg" alt="">
+  </div>
+  ```
+
+  
+
+  ![Snip20191119_2](Snip20191119_2.png) ![Snip20191119_3](Snip20191119_3.png)
+
+  >  一般来说, 水平滚动条是用来滚动图片内容的, 当图片的内容超过宽度才会显示, 而文字内容一般会自动换行, 超多高度后垂直滚动滚动条查看
+
+
+
+
+
+- 另外, 还有**overflow-x和overflow-y**两个属性, 可以分别设置水平方向和垂直方向, 这2个属性是css3的, 不建议使用
+
+
+
+
+
+
+
+# 十八. 行内级元素之间的间隙
+
+
+
+- **行内级**元素(包括inline-block元素)的代码之间如果有空格, 会被解析显示为空格, 现象就是默认情况下**行内级** 元素之间有一个间隙, 且这个间隙大小有字体的大小决定
+
+  ```
+  <style>
+    body{
+      background-color: pink;
+    }
+  
+    div:nth-of-type(even){
+      background-color: #f00;
+    }
+    div:nth-of-type(odd){
+      background-color: #0f0;
+    }
+  
+    span:nth-of-type(even){
+      background-color: #00f;
+    }
+    span:nth-of-type(odd){
+      background-color: #ff0;
+    }
+  
+    strong:nth-of-type(even){
+      background-color: #0ff;
+    }
+    strong:nth-of-type(odd){
+      background-color: #ff0;
+    } 
+  </style>
+  ```
+
+  ```
+  <body>
+  <div>我是div1</div>
+  <div>我是div1</div>
+  
+  <span>我是span1</span>
+  <span>我是span2</span>
+  <span>我是span3</span>
+  <span>我是span4</span>
+  <span>我是span5</span>
+  
+  <img src="a.jpg" alt="">
+  
+  <strong>我是strong1</strong>
+  <strong>我是strong2</strong>
+  </body>
+  ```
+
+  
+
+  ![Snip20191119_4](Snip20191119_4.png)  
+
+  > 原因分析:
+  >
+  > - 造成行内级元素之间的间隙的原因是浏览器将行内级元素之间的换行或者空格符解析成空格显示出来了
+  > - 行内级元素之间的间隙大小是由父元素的font-size 大小决定的
+
+
+
+
+
+
+
+- 目前解决行内元素之间因为代码书写时的换行空格造成的**行内级** 元素显示之间的间隙方法有以下几种:
+
+  - 行内元素代码书写时, 元素之间不要留空格或者换行
+
+    ```
+    <span>我是span1</span> <span>我是span2</span>
+    <span>我是span3</span> 
+    
+    // 上面的所有换行和空格要去掉,改为下面的样式 , 行内与行内元素之间不要有换行和空格
+    <span>我是span1</span><span>我是span2</span><span>我是span3</span> 
+    ```
+
+  - 行内元素与行内元素之间的换行和空格使用, 标签注释代替
+
+     ```
+    <span>我是span1</span> <span>我是span2</span>
+    <span>我是span3</span> 
+    
+    // 改为下面
+    <span>我是span1</span><!-- --><span>我是span2</span><!--
+    --><span>我是span3</span> 
+     ```
+
+  - 设置父元素的**font-size**为0, 然后在元素中重新设置自己需要的**font-size**
+
+    - 此方法在safari中不使用
+
+  - 给元素添加**float** 
+
+  
+
+# 十九. CSS 属性- line-height 行高
+
+
+
+- line-height 用于设置(文本和内容(eg: 图片))的最小行高 , 行高是可以继承的
+
+- 行高可以简单理解为一行文字占据的高度
+
+- 行高的严格定义
+
+  > - 两行文字基线(base-line)之间的间距
+  > - 基线(base-line), 与小写字母xx底部对齐的线
+
+  ![Snip20191119_8](Snip20191119_8.png)
+
+
+
+- 行高**line-height** 可以设置的值
+
+  - `具体数字+单位`: eg: 40px
+
+  - `百分比`: eg: 200%, 最终的行高值是用百分比乘以元素的字体大小
+
+    ```
+    div {
+    	font-size: 20px;
+    	// 此处就相当于是200% * 20px = 40px , 相当于 line-height:40px
+    	line-height: 200%;
+    }
+    ```
+
+  - `具体数值`: eg: 2.5 , 最终的行高值是用数字值乘以字体的大小
+
+    ```
+    div {
+    	font-size: 20px;
+    	// 此处就相当于是2.5 * 20px = 50px , 相当于 line-height:50px
+    	line-height: 2.5;
+    }
+    ```
+
+  - `normal`: 常规显示, 浏览器会基于元素字体调整成一个合理值, 范围 `1.0 ~1.2`, 具体的值和浏览器有关. 其实默认就是这个值
+
+  - `xem`, eg : 2em, 最终的行高值是用数字值乘以字体的大小
+
+    ```
+    div {
+    	font-size: 20px;
+    	// 此处就相当于是2 * 20px = 40px , 相当于 line-height:40px
+    	line-height: 2em;  // em 就是相对于 字体大小的一个度量单位
+    }
+    ```
+
+    
+
+- 注意点1:
+
+  - `height` 和 `line-height` 是不同的属性, 他们之间是有区别的
+
+  - `height` 表示的是元素的整体高度
+
+    
+
+- 行高的应用实例
+
+  - 假设div中只有一行文字, 如何让这行文字在div内部垂直居中呢? 
+
+    - 只要设置这一行文字的行高和div的高度一样, 就可以保证文字垂直居中
+
+      ```
+      div { // div 内一行文字垂直居中
+      	line-height: 50px;
+      	height:50px
+      }
+      ```
+
+      
+
+- 注意点2
+
+  - line-height 属性只能设置文字的最小行高, 当内容中有图片的话, 行高可能和line-height 设置的值不一样
+
+  - 也就是说, 你设置了line-height 后不能保证行高就是你设定的值, 只能保证最小行高是你设置的值
+
+    ```
+    div{
+      background-color: #ff0;
+      font-size: 30px;
+      line-height:30px;
+    }
+    
+    .box{
+      background-color: #0f0;
+    }
+    ```
+
+    ```
+    <div class="box">
+        我是div
+    </div>
+    <div>
+        我是div1
+        <img src="a.jpg" alt="">
+    </div>
+    ```
+
+    ![Snip20191119_9](Snip20191119_9.png)
+
+
+
+- line-height 行高的继承特点 (有坑)
+
+  - 如果父元素在设置`line-height` 时, 写的是具体值,eg: `1.5` 那么子元素继承下来的`line-height` 也是具体值`2`,  子元素的行高为子元素的字体大小乘以line-height的具体值
+
+  -  如果父元素设置行高`line-height` 时写的是`百分比 或者 xem` 那么子元素继承下来的行高就是父元素的行高的具体指.
+
+    ```
+    <div>
+        我是div
+        <span>我是span</span>
+    </div>
+    ```
+
+    ```
+    div{
+      height: 100px;
+      background-color: #0f0;
+      
+      font-size:30px;
+      // 相当于设置行高为 200% * 30px = 60px
+      // 子元素继承到的行高是计算值, 60px
+      line-height:200%;  
+    }
+    
+    span{
+      background-color: pink;
+      font-size: 20px;
+    }
+    ```
+
+    ![Snip20191119_13](Snip20191119_13.png)
+
+    
+
+    ```
+    div{
+      height: 100px;
+      background-color: #0f0;
+      
+      font-size:30px;
+      // 相当于设置行高为 2 * 30px = 60px
+      // 子元素继承到的行高是计算值, 60px
+      line-height:2em;  
+    }
+    
+    span{
+      background-color: pink;
+      font-size: 20px;
+    }
+    ```
+
+    ![Snip20191119_17](Snip20191119_17.png)
+
+    
+
+    ```
+    div{
+      height: 100px;
+      background-color: #0f0;
+      
+      font-size:30px;
+      // 相当于设置行高为 2 * 30px = 60px
+      // 子元素继承到的是字面值, 2, 最后得到的行高需要与子元素的字体计算得到
+      line-height:2;  
+    }
+    
+    span{
+      background-color: pink;
+      font-size: 20px;
+    }
+    ```
+
+    ![Snip20191119_20](Snip20191119_20.png)
+
+ 
+
+
+
+# 二十. CSS属性- 盒子模型
 
 
 
